# default-crud

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/v1/: dependencies.py  router.py
app/api/v1/endpoints/: items.py
app/core/: exceptions.py
app/db/: base.py  session.py
app/models/: item.py
app/repositories/: base.py  interfaces.py  item.py
app/schemas/: base.py  item.py
app/services/: base.py  interfaces.py  item.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: app.js
migrations/: env.py
tests/: conftest.py
tests/integration/: test_items_api.py
tests/unit/: test_base_repository.py  test_base_service.py  test_schemas.py
